# C10K-chat-server

./: .gitignore  CMakeLists.txt  IMPLEMENTATION_STATUS.md  README.md  TASK_14.4_VERIFICATION.md  brainstorm.md
.kiro/specs/c10k-chat-server/: .config.kiro  design.md  requirements.md  tasks.md
config/: config.conf.example  credentials.txt
include/: auth_manager.h  common.h  connection_handler.h  epoll_manager.h  history_manager.h  logger.h  message_router.h  signal_handler.h  task_queue.h  thread_pool.h  websocket_handler.h
src/: auth_manager.c  connection_handler.c  epoll_manager.c  history_manager.c  logger.c  main.c  message_router.c  signal_handler.c  task_queue.c  thread_pool.c  websocket_handler.c
tests/: test_auth_manager  test_auth_manager.c  test_connection_handler  test_connection_handler.c  test_event_loop.c  test_history_manager  test_history_manager.c  test_main  test_main.c  test_message_router  test_message_router.c  test_session_id  test_session_id.c  test_shutdown.c  test_signal_handler  test_signal_handler.c  test_thread_pool  test_thread_pool.c  test_websocket_handler  test_websocket_handler.c
web/: .gitkeep  app.js  index.html  style.css
